<resources>
    <string name="app_name">LNotes</string>

    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="todos">To-do</string>
    <string name="new_item">New item</string>
    <string name="note_title_hint">Title</string>
    <string name="note_desc_hint">Description</string>
    <string name="saveNote">Save</string>
    <string name="bold">Bold</string>
    <string name="colorPicker">Pick color</string>
    <string name="enter_list_name">Enter list name</string>
    <string name="list_name">List name</string>
    <string name="make_list">Create list</string>
    <string name="delete_list">Delete list</string>
    <string name="cancel">Cancel</string>
    <string name="ask_delete_list">Do you want to delete this list?</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="empty">Empty</string>
    <string name="general">General</string>
    <string name="visuals">Visual</string>
    <string name="styleChooser">Choose note style</string>
    <string name="themeChooser">Choose note theme</string>
    <string name="formatChooser">Choose time format</string>
    <string name="sizeChooserH">Choose font size for note heading</string>
    <string name="sizeChooserC">Choose font size for note content</string>
    <string name="buyPremium">Buy ultra premium mega pro plus edition</string>
    <string name="buyPremium_summary">Unlock ability to define reality…</string>

    <string name="dummy">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>